--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,5 +1,5 @@
 :root {
-    font-family: 'Roboto', system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     line-height: 1.5;
     font-weight: 400;
 
@@ -25,9 +25,7 @@ body,
 }
 
 body {
-    font-family: 'Arial', sans-serif;
     color: white;
-
     margin: 0;
     padding: 0;
     display: flex;
